<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.gilbertojimenezorench.myapp.RegisterActivity"
    android:background="@drawable/back">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="8"
        android:id="@+id/lnametxt"
        android:hint="@string/lnametexthint"
        android:textColorHint="#FFFFF0"
        android:textColor="#FFFFFF"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="Sign Up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:id="@+id/registerBtn"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="8"
        android:id="@+id/fnametxt"
        android:hint="@string/fnametexthint"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:textColorHint="#FFFFF0"
        android:textColor="#FFFFFF" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/remailtxt"
        android:hint="@string/remailtext"
        android:layout_below="@+id/lnametxt"
        android:layout_alignParentStart="true"
        android:layout_marginTop="18dp"
        android:textColorHint="#FFFFF0"
        android:textColor="#FFFFFF"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/rpasstxt"
        android:hint="@string/rpasstext"
        android:layout_below="@+id/remailtxt"
        android:layout_alignParentStart="true"
        android:layout_marginTop="21dp"
        android:textColorHint="#FFFFF0"
        android:textColor="#FFFFFF"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/rcelltext"
        android:hint="@string/rcelltext"
        android:layout_below="@+id/rpasstxt"
        android:layout_alignParentStart="true"
        android:layout_marginTop="22dp"
        android:textColorHint="#FFFFF0"
        android:textColor="#FFFFFF"/>
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rcelltext"
        android:checkedButton="@+id/nurseRadioBtn"
        android:baselineAligned="false"
        android:clickable="false"
        android:orientation="horizontal"
        android:layout_alignEnd="@+id/fnametxt"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp">

        <RadioButton
            android:text="Admin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/adminRadioBtn"
            android:layout_marginEnd="20dp"
            android:textColor="#FFFFFF"/>

        <RadioButton
            android:text="Nurse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nurseRadioBtn"
            android:textColor="#FFFFFF" />


    </RadioGroup>


</RelativeLayout>
